# neurosecure-ota-pipeline

./: Cargo.toml
scripts/: daily_evolution.sh
