[workspace]
members = [
    "crates/bioscale-upgrade-store",
    "crates/bioscale-upgrade-macros",
    "crates/bioscale-metrics",
    "crates/cyberswarm-neurostack",
    "crates/cybernano-guard",
    "crates/bioscale-evolution-cli",
]

resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["Phoenix Lab Neurosecure OTA Pipeline <neurosecure@example.com>"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
prometheus = "0.13"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
